# GameSync

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  native-gui.yml  release.yml
crates/gamesync-cli/: Cargo.toml
crates/gamesync-cli/src/: main.rs
crates/gamesync-core/: Cargo.toml
crates/gamesync-core/manifests/: emulators.json  saves.json  standalone.json
crates/gamesync-core/src/: cas.rs  crypto.rs  db.rs  diff.rs  engine.rs  error.rs  lib.rs  model.rs  plugins.rs  process.rs  restore.rs  retention.rs  snapshot.rs  util.rs  vclock.rs
crates/gamesync-core/src/detection/: emulators.rs  epic.rs  gog.rs  ludusavi.rs  manifest.rs  mod.rs  paths.rs  standalone.rs  steam.rs  vdf.rs
crates/gamesync-core/src/remote/: folder.rs  lan.rs  mod.rs  rclone.rs
crates/gamesync-core/tests/: engine.rs
crates/gamesync-gui/: Cargo.toml  build.rs
crates/gamesync-gui/assets/: AppIcon.icns
crates/gamesync-gui/src/: app.rs  main.rs  theme.rs  tray.rs  util.rs  worker.rs
docs/: ARCHITECTURE.md  BUILDING.md  CLOUD-SYNC.md  GAMES.md  PLUGINS.md
src/: App.tsx  api.ts  format.ts  main.tsx  styles.css  theme.ts  types.ts
src-tauri/: Cargo.toml  gen-icon.cjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AddGameModal.tsx  ConflictDiffModal.tsx  EncryptModal.tsx  FilesModal.tsx  GameCard.tsx  GameSettingsModal.tsx  Lock.tsx  Modal.tsx  PluginsModal.tsx  RenameModal.tsx  SettingsModal.tsx  SyncSpinner.tsx  ThemeModal.tsx  VersionsModal.tsx  Wizard.tsx
