[workspace]
resolver = "2"
members = ["crates/gamesync-core", "crates/gamesync-cli", "src-tauri"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/nickPisano/GameSync"

# Shared dependency versions for all crates in the workspace.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = "0.30"
walkdir = "2"
globset = "0.4"
directories = "5"
thiserror = "1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
getrandom = "0.2"
xz2 = "0.1"
serde_yaml = "0.9"

# Optimize for fast, safe release builds. Save data integrity matters more
# than squeezing the last few percent of speed, so keep overflow checks on.
[profile.release]
opt-level = 2
overflow-checks = true
