[package]
name = "gamesync-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line driver for the GameSync engine (Phase 0/1 prototype)."

[[bin]]
name = "gamesync"
path = "src/main.rs"

[dependencies]
gamesync-core = { path = "../gamesync-core" }
serde_json.workspace = true
