[package]
name = "gamesync-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine for GameSync: safe, versioned, content-addressed game-save backup and sync."

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
rusqlite.workspace = true
sysinfo.workspace = true
walkdir.workspace = true
globset.workspace = true
directories.workspace = true
thiserror.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
xz2.workspace = true

[dev-dependencies]
tempfile = "3"
