[package]
name = "gamesync-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# A native, webview-free desktop UI for GameSync, built on egui/eframe.
# Experiment (branch `experiment/native-gui`) to replace the Tauri/WebView2
# shell so the shipped binary embeds no browser engine at all.

[dependencies]
gamesync-core = { path = "../gamesync-core" }
eframe = "0.31"
serde = { workspace = true }
serde_json = { workspace = true }
# Native OS file/folder dialogs (no webview). Uses GTK on Linux, Cocoa on
# macOS, the native dialog on Windows.
rfd = "0.15"
# System tray icon + menu (close-to-tray).
tray-icon = "0.19"
# Decode the brand PNG for the topbar logo (png only; same version eframe uses).
image = { version = "0.25", default-features = false, features = ["png"] }
